refactor: modernizações de sintaxe Java 9-25
- StringBuffer→StringBuilder (AnalyzePage)
- SimpleDateFormat→DateTimeFormatter (ModalDetalhes, GitCore, JNose, ProjetosPage)
- Runtime.exec→ProcessBuilder (Util.java)
- FileReader/FileWriter→Files.newBufferedReader/newBufferedWriter
  (CSVCore, CodePage, Util, CoverageClasspathResolver)
- Diamond operator (CoverageClasspathResolver)
- Unused import removal + .collect(toList())→.toList() (ProjetoBusiness)
- String.format→String.formatted (JNose.java)
- Removidos arquivos de chart comentados (dead code)