@@ -6,7 +6,6 @@ import io.github.arieslab.entities.Projeto;
 import org.springframework.stereotype.Component;
 import org.springframework.transaction.annotation.Transactional;
 import java.util.List;
-import static java.util.stream.Collectors.toList;
 
 @Component
 @Transactional
@@ -18,7 +17,7 @@ public class ProjetoBusiness extends BusinessGeneric<ProjectDao, Projeto> {
      * @return filtered list of projects
      */
     public List<Projeto> listAllWithFilter(){
-        return dao.listAll().stream().filter(o -> !o.getJunitVersion().equals("None")).collect(toList());
+        return dao.listAll().stream().filter(o -> !o.getJunitVersion().equals("None")).toList();
     }
 
     /**
